BUG: _static/css/local.css: a { word-wrap }

--- a/docs/_static/css/local.css
+++ b/docs/_static/css/local.css
@@ -36,6 +36,9 @@ div.body h1 {
     padding-bottom: 10px;
 }
 
+div.body a {
+    word-wrap: break;
+}
 
 #sidebar-wrapper {
     overflow-y: auto;
